--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6250843049930036"
+     crossorigin="anonymous"></script>
+
   <meta charset="utf-8">
   <title>Frontend</title>
   <base href="/">
